# calibration-scope

./: .amb-tasks.md  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  CITATION.cff  Cargo.toml  DECISIONS.md  DEEP_RESEARCH_2026-07-09.md  LM_STUDIO_AUXILIARY_MODELS.md  README.md  RENAMING.md  SCISPACE_PACKAGE.md  SPECULATIVE_PAIR_INVENTORY.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
assets/: app.css  app.js  app.min.css  app.min.js  dashboard.html
assets/brain/: brain-hero.html
data/: agent_security_benchmark.sqlite  archetype_mesh_benchmark.sqlite  tableplus_agent_security_benchmark.tpconnection.json
docs/: FINDINGS.md  RELEASING.md  architecture.excalidraw  benchmark-note-engine-tuning-neutral.md  full-local-audit-2026-07-20.md  lm-studio-api-notes.md  local-access-strategy.md
docs/experiments/: carrier_color_experiment_spec_v1.md
evidence/sel4/: MANIFEST.json  image.elf
evidence/watchdog/: CERTIFICATION.json  self_stop_api_evidence.json  timeline.txt
lean/: CalibrationScope.lean
lessons/: 01-calculator-aisle.md  02-truncate-middle.md  03-token-exhaustion.md  04-carrier-color.md  README.md
migrations/: 001_init.sql  002_models.sql  003_tests.sql  004_test_runs.sql  009_widen_axis_constraint.sql  010_auxiliary_tests.sql  011_lmstudio_sync.sql  013_logic_tests.sql  014_run_per_axis.sql  015_drop_flaky_threshold.sql  017_infra_error_flag.sql  018_reasoning_content.sql  021_trial_test_link.sql  022_hf_repo.sql  023_key_provider_unique.sql  024_cost_reality.sql  025_expanded_logic_battery.sql  029_scaffold_experiment.sql  030_load_modes.sql  031_quarantine_review.sql  032_quarantine_reason_check.sql  033_speculative_decode_stats.sql  034_lmstudio_runtime_config.sql  036_owl_semaphore.sql  043_human_calibration.sql  044_reconcile_quarantine.sql  045_quarantine_leaked_scaffold_runs.sql  046_quarantine_leaked_scaffold_runs.sql  047_owl_nc_family_coverage.sql  048_owl_root_by_name.sql  _sqlx_migrations.db
policy/: HANDOFF_claude_code_gui.md
scripts/: build-web.sh  capability_dashboard_server.py  db_status.py  deploy-site.sh  deploy.sh  live_dashboard.py  todo.md  trust-local-ca.sh  verify_logic_ground_truth.py
site/: 404.html  index.html  install.sh  lessons.html
src/: config.rs  embedded.rs  error.rs  gpu_telemetry.rs  lib.rs  local_tls.rs  main.rs  security.rs  state.rs
src/db/: queries.rs
src/executor/: cloud.rs  lmstudio.rs  local.rs  mod.rs  mod.rs.bak-20260712-171814  mod.rs.bak-20260712-172710  mod.rs.bak-20260712-173152  provenance.rs  scoring.rs
src/models/: benchmark.rs  mod.rs  model_entry.rs  owl.rs  tests.rs
src/routes/: cloud_keys.rs  cloud_sync.rs  dossier.rs  download.rs  events.rs  fountain.rs  hermes_check.rs  host.rs  index.rs  insights.rs  lmstudio.rs  loot.rs  mcp.rs  mod.rs  models.rs  neurovault.rs  participants.rs  prompt_check.rs  quarantine.rs  router.rs  runs.rs  signal_carrier.rs  spec_decode.rs  status.rs  summary.rs  tests.rs
tests/: integration.rs
tests/common/: mod.rs  spec_decode_util.rs
zig-backend/: build.zig  signal_wrapper.c
zig-backend/src/: ledger.zig  main.zig  router.zig  sqlite.zig
