[package]
name = "calibration-scope"
version = "0.1.0"
edition = "2021"

[lib]
name = "calibration_scope_dashboard"
path = "src/lib.rs"

[[bin]]
name = "calibration-scope-dashboard"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"
yaml-rust2 = "0.11.0"
walkdir = "2.5.0"
rand = "0.8"

# macOS-only: Metal GPU-ceiling measurement (src/routes/host.rs). Gated so the
# binary builds on Linux (CI, non-Mac hosts) — the GPU ceiling is simply None
# there. objc2 fails to compile off Apple platforms, so it must NOT be an
# unconditional dependency.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal = { version = "0.3.2", features = ["MTLDevice"] }
objc2 = "0.6.4"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
dotenvy = "0.15.7"
