[package]
name = "calibration-scope"
version = "0.1.0-beta.1"
edition = "2021"
description = "Test your AI models like a scientist — ground-truth benchmarks, N=3 trials, SHA3-sealed evidence, local-first"
repository = "https://github.com/IT-Help-San-Diego/calibration-scope"
homepage = "https://calibrationscope.com"
license = "Apache-2.0"

[lib]
name = "calibration_scope_dashboard"
path = "src/lib.rs"

[[bin]]
name = "calibration-scope-dashboard"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"
yaml-rust2 = "0.11.0"
walkdir = "2.5.0"
rand = "0.8"

# .env auto-load for `cargo run` dev flows (README quick start). Real
# deployments inject env via launchd/systemd; dotenv never overrides them.
dotenvy = "0.15.7"

# Prebuilt-binary self-containment: assets/ (dashboard, JS/CSS, SHA3-pinned
# test stimuli) embedded at compile time, used only when the disk copy is
# absent. See src/embedded.rs.
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# Local HTTPS (handoff item 1): self-provisioned CA + leaf via rcgen, served
# with rustls. ring backend (not aws-lc) so Linux CI builds without cmake/perl.
rcgen = "0.13"
time = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"
hyper-util = { version = "0.1", features = ["server-auto", "http1", "http2", "tokio", "service"] }

# macOS-only: Metal GPU-ceiling measurement (src/routes/host.rs). Gated so the
# binary builds on Linux (CI, non-Mac hosts) — the GPU ceiling is simply None
# there. objc2 fails to compile off Apple platforms, so it must NOT be an
# unconditional dependency.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal = { version = "0.3.2", features = ["MTLDevice"] }
objc2 = "0.6.4"

[features]
default = []
# FIPS-validated crypto (AWS-LC FIPS module) for institutions whose policy
# requires FIPS 140-3: build with `cargo build --release --features fips`.
# Needs cmake (and go) at build time — which is why it is opt-in, not default:
# the default ring backend keeps the instrument installable with zero extra
# toolchain. Same rustls TLS either way; only the crypto provider swaps.
fips = ["tokio-rustls/fips"]

[profile.release]
opt-level = 3
lto = true

# The profile that 'dist' will build with — matches [profile.release] (fat
# LTO) so a released binary performs identically to a locally built one.
[profile.dist]
inherits = "release"
lto = true

[dev-dependencies]
# (dotenvy moved to [dependencies] — the binary itself now loads .env.)
